# ChangeLog for app-arch/ncompress
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/ncompress/ChangeLog,v 1.42 2010/02/10 16:07:51 josejx Exp $

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org> ncompress-4.2.4.3.ebuild:
  Marked ppc/ppc64 stable for bug #300943.

*ncompress-4.2.4.3 (30 Jan 2010)

  30 Jan 2010; Mike Frysinger <vapier@gentoo.org> +ncompress-4.2.4.3.ebuild:
  Version bump #302773.

  13 Sep 2008; <solar@gentoo.org> ncompress-4.2.4.2.ebuild:
  - fix broken cross compile support

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> ncompress-4.2.4.2.ebuild:
  Stable on mips, per #198597.

  13 Nov 2007; Jeroen Roovers <jer@gentoo.org> ncompress-4.2.4.2.ebuild:
  Stable for HPPA (bug #198597).

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> ncompress-4.2.4.2.ebuild:
  alpha/ia64 stable wrt #198597

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> ncompress-4.2.4.2.ebuild:
  Stable on ppc64; bug #198597

  10 Nov 2007; Ferris McCormick <fmccor@gentoo.org>
  ncompress-4.2.4.2.ebuild:
  Sparc stable --- Bug #198597 --- works so far as I can tell.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> ncompress-4.2.4.2.ebuild:
  amd64 stable wrt #198597

  10 Nov 2007; nixnut <nixnut@gentoo.org> ncompress-4.2.4.2.ebuild:
  Stable on ppc wrt bug 198597

  10 Nov 2007; Dawid Węgliński <cla@gentoo.org> ncompress-4.2.4.2.ebuild:
  Stable on x86 (bug #198597)

*ncompress-4.2.4.2 (07 Sep 2007)

  07 Sep 2007; Mike Frysinger <vapier@gentoo.org> +ncompress-4.2.4.2.ebuild:
  Version bump.

  06 Oct 2006; Guy Martin <gmsoft@gentoo.org> ncompress-4.2.4.1.ebuild:
  Stable on hppa.

  05 Oct 2006; Thomas Cort <tcort@gentoo.org> ncompress-4.2.4.1.ebuild:
  Stable on alpha wrt security Bug #141728.

  03 Oct 2006; Joshua Jackson <tsunam@gentoo.org> ncompress-4.2.4.1.ebuild:
  Stable x86; bug #141728

  02 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> ncompress-4.2.4.1.ebuild:
  Marked stable on amd64 for bug #141728
