@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/ncompress
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/ncompress/ChangeLog,v 1.42 2010/02/10 16:07:51 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/ncompress/ChangeLog,v 1.43 2010/02/10 16:34:06 jer Exp $
+
+  10 Feb 2010; Jeroen Roovers <jer@gentoo.org> ncompress-4.2.4.3.ebuild:
+  Stable for HPPA (bug #300943).
 
   10 Feb 2010; Joseph Jezak <josejx@gentoo.org> ncompress-4.2.4.3.ebuild:
   Marked ppc/ppc64 stable for bug #300943.
